--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /db/*.sqlite3-journal
 /public/system
 /spec/tmp
-/node_modules
+/client/node_modules
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
@@ -16,4 +16,3 @@ config/secrets.yml
 /vendor/bundle
 
 .env
-.DS_Store
