--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,15 @@
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: development
 
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: test
 
 production:
   adapter: postgresql
