--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,12 @@
+root = true
+
 [*]
 end_of_line = lf
-indent_style = tab
+charset = utf-8
+indent_style = space
 indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.md}]
-insert_final_newline = false
+[{*.js,*.jsx,www}]
+indent_style = tab
