--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mongoose": "^4.5.7",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
-    "passport-github2": "^0.1.10"
+    "passport-github2": "^0.1.10",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "ava": "^0.16.0",
