--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "mongoose": "^4.5.7",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
-    "passport-github2": "^0.1.10",
+    "passport-github": "^1.1.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
@@ -47,10 +47,8 @@
     "xo": "^0.16.0"
   },
   "xo": {
-    "esnext": true,
     "envs": [
-      "browser",
-      "node"
+      "browser"
     ]
   }
 }
