--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,47 @@
 {
   "name": "chest-registry-client",
   "private": true,
-  "main": "index.js",
+  "main": "index.jsx",
   "dependencies": {
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.25.0",
     "react": "^15.3.2",
-    "react-router": "^2.8.1"
-  },
-  "devDependencies": {
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
     "webpack": "^1.13.2"
   },
-  "scripts": {
-    "test": "xo"
+  "devDependencies": {
+    "ava": "^0.16.0",
+    "eslint-config-xo-react": "^0.10.0",
+    "eslint-plugin-react": "^6.3.0",
+    "xo": "^0.16.0"
   },
-  "keywords": [],
+  "scripts": {
+    "postinstall": "webpack --progress",
+    "test": "xo",
+    "start": "webpack -w"
+  },
   "author": "Yasuaki Uechi <uetchy@randompaper.co> (https://randompaper.co/)",
   "license": "MIT",
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0",
+      "react"
+    ]
+  },
   "xo": {
+    "semicolon": false,
     "envs": [
       "browser"
-    ]
+    ],
+    "extends": "xo-react"
   }
 }
