--- a/client/package.json
+++ b/client/package.json
@@ -5,21 +5,23 @@
   "dependencies": {
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "css-loader": "^0.25.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.26.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1",
+    "react-router": "^3.0.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
-    "ava": "^0.16.0",
+    "ava": "^0.17.0",
     "eslint-config-xo-react": "^0.10.0",
     "eslint-plugin-react": "^6.3.0",
-    "xo": "^0.16.0"
+    "xo": "^0.17.1"
   },
   "scripts": {
     "postinstall": "webpack --progress",
