--- a/client/package.json
+++ b/client/package.json
@@ -8,25 +8,23 @@
     "start": "webpack -w"
   },
   "dependencies": {
-    "babel-loader": "^6.2.5",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.26.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-router": "^3.0.0",
-    "style-loader": "^0.13.1",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router": "^4.1.1",
+    "style-loader": "^0.16.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.3.1",
-    "webpack": "^1.13.2"
+    "stylus-loader": "^3.0.1",
+    "webpack": "^2.4.1"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
-    "eslint-config-xo-react": "^0.10.0",
-    "eslint-plugin-react": "^6.3.0",
-    "xo": "^0.17.1"
+    "ava": "^0.19.1",
+    "eslint-plugin-react": "^6.10.3"
   },
   "author": "Yasuaki Uechi <uetchy@randompaper.co> (https://randompaper.co/)",
   "license": "MIT",
