--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "postinstall": "npm --prefix client install",
-    "start": "node ./bin/www",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "postinstall": "cd client; yarn install",
+    "start": "babel-node ./bin/www",
+    "watch": "run-p watch:*",
+    "watch:server": "nodemon --exec babel-node --debug --ignore client/ --ignore public/ ./bin/www",
+    "watch:client": "cd client; yarn start",
     "test": "run-p test:*",
     "test:server": "nyc ava && standard",
-    "test:client": "npm --prefix client test",
-    "watch": "run-p watch:*",
-    "watch:server": "nodemon --debug --ignore client/ --ignore public/ ./bin/www",
-    "watch:client": "npm --prefix client start"
+    "test:client": "cd client; yarn test",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-2"
+    ]
   },
   "repository": {
     "type": "git",
@@ -27,32 +33,35 @@
   },
   "homepage": "https://github.com/Sketch-Chest/chest-registry#readme",
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.17.1",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
-    "express": "^4.14.0",
-    "express-session": "^1.14.0",
-    "mongoose": "^4.5.7",
-    "morgan": "^1.7.0",
+    "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "mongoose": "^4.9.6",
+    "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
-    "react": "^15.3.2",
-    "react-router": "^3.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^4.0.0",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-router": "^4.1.1"
   },
   "devDependencies": {
-    "ava": "^0.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-register": "^6.18.0",
-    "coveralls": "^2.11.14",
+    "ava": "^0.19.1",
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "coveralls": "^2.13.1",
     "dotenv": "^4.0.0",
-    "eslint-plugin-flowtype": "^2.29.2",
+    "eslint-plugin-flowtype": "^2.32.1",
     "nodemon": "^1.10.2",
     "npm-run-all": "^4.0.0",
-    "nyc": "^10.0.0",
-    "should": "^11.1.2",
-    "standard": "^8.6.0"
+    "nyc": "^10.2.0",
+    "should": "^11.1.2"
   },
   "standard": {
     "parser": "babel-eslint",
