--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "main": "index.jsx",
   "scripts": {
     "postinstall": "webpack --progress --optimize-minimize",
-    "test": "xo",
+    "test": "semistandard",
     "start": "webpack -w"
   },
   "dependencies": {
@@ -12,11 +12,11 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "style-loader": "^0.16.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
@@ -31,15 +31,8 @@
   "babel": {
     "presets": [
       "es2015",
-      "stage-0",
+      "stage-2",
       "react"
     ]
-  },
-  "xo": {
-    "semicolon": false,
-    "envs": [
-      "browser"
-    ],
-    "extends": "xo-react"
   }
 }
