--- a/client/package.json
+++ b/client/package.json
@@ -1,38 +1,25 @@
 {
-  "name": "chest-registry-client",
+  "name": "client",
+  "version": "0.1.0",
   "private": true,
-  "main": "index.jsx",
   "scripts": {
-    "postinstall": "webpack --progress --optimize-minimize",
-    "test": "semistandard",
-    "start": "webpack -w"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
-    "babel-loader": "^7.0.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-router-dom": "^4.1.1",
-    "style-loader": "^0.16.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "webpack": "^2.4.1"
+    "react-scripts": "^1.0.17",
+    "stylus": "^0.54.5"
   },
   "devDependencies": {
-    "ava": "^0.19.1",
-    "eslint-plugin-react": "^6.10.3"
+    "ava": "^0.23.0",
+    "eslint-plugin-react": "^7.4.0"
   },
-  "author": "Yasuaki Uechi <uetchy@randompaper.co> (https://randompaper.co/)",
+  "author": "Yasuaki Uechi <y@uechi.io> (https://uechi.io)",
   "license": "MIT",
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-2",
-      "react"
-    ]
-  }
+  "proxy": "http://localhost:5000"
 }
