--- a/package.json
+++ b/package.json
@@ -3,77 +3,40 @@
   "version": "1.0.0",
   "description": "Chest registry service.",
   "private": true,
-  "main": "index.js",
   "scripts": {
-    "postinstall": "cd client; npm install",
-    "start": "babel-node ./bin/www",
+    "heroku-postinstall": "cd client; npm install; npm run build",
+    "start": "node ./bin/www",
     "watch": "run-p watch:*",
     "watch:server": "nodemon --exec babel-node --inspect --ignore client/ --ignore public/ ./bin/www",
     "watch:client": "cd client; npm start",
     "test": "run-p test:*",
-    "test:server": "nyc ava && standard",
+    "test:server": "nyc ava",
     "test:client": "cd client; npm test",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-2"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/Sketch-Chest/chest-registry.git"
-  },
-  "keywords": [],
   "author": "Yasuaki Uechi <uetchy@randompaper.co> (https://randompaper.co/)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Sketch-Chest/chest-registry/issues"
-  },
   "homepage": "https://github.com/Sketch-Chest/chest-registry#readme",
   "dependencies": {
-    "auth0-js": "^8.10.1",
+    "auth0-js": "^8.11.3",
     "body-parser": "^1.17.1",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
-    "mongoose": "^4.9.6",
-    "morgan": "^1.8.1",
-    "passport": "^0.3.2",
+    "mongoose": "^4.13.4",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-router": "^4.1.1"
+    "passport-local-mongoose": "^4.4.0"
   },
   "devDependencies": {
-    "ava": "^0.19.1",
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "coveralls": "^2.13.1",
-    "dotenv": "^4.0.0",
-    "eslint-plugin-flowtype": "^2.32.1",
+    "ava": "^0.23.0",
+    "coveralls": "^3.0.0",
     "nodemon": "^1.10.2",
-    "npm-run-all": "^4.0.0",
-    "nyc": "^10.2.0",
-    "should": "^11.1.2"
-  },
-  "standard": {
-    "parser": "babel-eslint",
-    "plugins": [
-      "flowtype"
-    ],
-    "ignore": [
-      "/client/"
-    ],
-    "envs": [
-      "browser"
-    ]
+    "npm-run-all": "^4.1.2",
+    "nyc": "^11.3.0",
+    "should": "^13.1.3"
   }
 }
